tests/test53.rael.exp
Error [1:4]: Expected at least one expression after "log"
| log
|    ^
